2011-06-09  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (execv): Stupid SBCL hackers breaking backwards
	compatibility again: SB-POSIX:SYSCALL-ERROR has a required
	argument in 1.0.49, but accepts no arguments in older ones. Use
	plain ERROR instead.

	Support for per-package derived indentation, when
	slime-indentation is used.

	* swank.lisp (update-indentation/delta-for-emacs): Tell Emacs
	which packages the symbol is available in. Unless
	slime-indentation is used, this information is just dropped on the
	floor.

	* slime.el (slime-update-system-indentation): New function. Use
	this to inform indentation about derived specs when
	`common-lisp-system-indentation' is bound.
	(slime-handle-indentation-update): Adjust to support per-package
	derived indentation specs when slime-indentation is available.

2011-05-27  Helmut Eller  <heller@common-lisp.net>

	Fix "wrong number of args" problem with slime-inspector-quit.
	Reported by Anton Kovalenko.

	* slime.el (slime-popup-buffer-quit-function)
	(slime-quit-threads-buffer): Drop the kill-buffer-p argument.

2011-05-24  Helmut Eller  <heller@common-lisp.net>

	* slime.el (destructure-case): Fix "`_' not left unused" warnings.
	Insert an (ignore) form for empty bodies; this inhibts the
	compiler transformation that leads to the spurios warning.  This
	has no runtime cost in compiled code, since the compiler
	recognizes (ignore) and emits no code for it.
	(slime-flatten-tree): Deleted. No longer used.

2011-05-23  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (sdlb-print-condition): New (or old new)
	function. It was bound by P in sldb-mode, but for some reason it
	was lost.

2011-05-23  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-apropos-label-properties): Deleted.  Just
	auto-load apropos-mode.
	(slime-print-apropos): Use the variable apropos-label-face
	which seems to exist in all relevant Emacsen.

2011-05-22  Helmut Eller  <heller@common-lisp.net>
